--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ yarn-error.log*
 lerna-debug.log*
 .yarn
 
+
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # OS
 .DS_Store
 
